--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -5,8 +5,8 @@ header {
     max-width: 1000px;
     margin: 0 auto;
     text-align: center;
-    background-color: #000;
-    color: #fff;
+    background-color: #999;
+    /* color: #fff; */
 }
 header h1 {
     margin: 0;
@@ -65,6 +65,7 @@ h4 {
 }
 a {
     text-decoration: none;
+    color: #00e;
 }
 a.no-style {
     color: #000;
