--- a/stylesheets/fonts.css
+++ b/stylesheets/fonts.css
@@ -1,7 +1,7 @@
 @font-face {
     font-family: 'Flexo-CapsDEMO';
-    src: url('assets/fonts/Flexo-CapsDEMO-webfont.woff2') format('woff2'),
-         url('assets/fonts/Flexo-CapsDEMO-webfont.woff') format('woff');
+    src: url('../fonts/Flexo-CapsDEMO-webfont.woff2') format('woff2'),
+         url('../fonts/Flexo-CapsDEMO-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 
